# goit-web-hw-12

./: .env.example  READMEI.md  main.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 36cc8f000424_create_users_table_and_add_user_id_to_.py  51c98fad8db4_fix_created_at_server_default.py  77901342b859_reduce_first_name_length_to_25.py  a1eab1d261de_add_role_to_users.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: users.py
src/routes/: auth.py  contacts.py  health.py  users.py
src/services/: auth.py
